--- a/index.html
+++ b/index.html
@@ -480,17 +480,17 @@
             <div class="footer_page">
                 <div class="container">
                     <div class="footer_infomation">
-                        <div class="logo_info">
-                            <img src="assets/image/logodh.png" class="img-fluid" alt="">
+                        <div class="system logo_info">
+                            <img src="assets/image/logodh.png" class="img-fluid logo_footer" alt="">
                             <div class="footer_contact">
-                                <span>Đại học Thủy Lợi - Số 175 Tây Sơn - Đống Đa - Hà Nội</span>
-                                <span><i class="fa-solid fa-phone"></i> (+84) 24 3869 2463 </span>
-                                <span><i class="fa-solid fa-envelope"></i>vp@soict.hust.edu.vn</span>
+                                <span class="text_contact">Đại học Thủy Lợi - Số 175 Tây Sơn - Đống Đa - Hà Nội</span>
+                                <span class="text_contact"><i class="fa-solid fa-phone"></i> (+84) 24 3869 2463 </span>
+                                <span class="text_contact"><i class="fa-solid fa-envelope"></i>vp@soict.hust.edu.vn</span>
                                
                             </div>
                         </div>
                         <div class="system">
-                            <h6>Khoa - Trung Tâm</h6>
+                            <h6 class="title_system">Khoa - Trung Tâm</h6>
                             <hr class="line">
                             <div class="content_system">
                                 <a href=""><span>Khoa học Máy Tính</span></a>
@@ -501,7 +501,7 @@
                             </div>                           
                         </div>
                         <div class="system">
-                            <h6>Chương trình đào tạo</h6>
+                            <h6 class="title_system">Chương trình đào tạo</h6>
                             <hr class="line">
                             <div class="content_system">
                                 <a href=""><span>Khoa học Máy Tính</span></a>
@@ -512,7 +512,7 @@
                             </div>                           
                         </div>
                         <div class="system">
-                            <h6>Hệ thống và tài nguyên</h6>
+                            <h6 class="title_system">Hệ thống và tài nguyên</h6>
                             <hr class="line">
                             <div class="content_system">
                                 <a href=""><span>Khoa học Máy Tính</span></a>
@@ -524,6 +524,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="copyright_footer">
+                <span>Copyright@2022 Trường Đại học Thủy Lợi</span>
             </div>
         </footer>
         
