add page tin tưc, gioi thieu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
+    <link rel="stylesheet" href="assets/css/header_footer.css">
     <link rel="stylesheet" href="assets/css/home.css">
 
     <!-- Bootstrap CSS -->
@@ -32,40 +33,162 @@
                 <div class="menu_page">
                     <ul class="list_menu_page">
                         <li class="item_menu">
-                            <a href="" class="link_menu">
+                            <a href="page/gioithieu.html" class="link_menu">
                                 Giới thiệu
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="page/gioithieu.html" class="link_menu_sub">Thông tin chung</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Sứ mệnh tầm nhìn</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Các tổ chức đoàn thể</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Công tác Đảng</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Công tác Đoàn</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Danh sách cán bộ</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                Khoa - Trung tâm 
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                               <div class="row">
+                                <div class="list_khoa">
+                                    <h6 class="title_menu_sub">KHoa</h6>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa công trình</a>
+                                    </li>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa kỹ thuật tài nguyên nước</a>
+                                    </li> 
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa công nghệ thông tin</a>
+                                    </li>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa Cơ Khí</a>
+                                    </li> 
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa Điện - Điện tử </a>
+                                    </li>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa Kinh tế  và Quản lý</a>
+                                    </li> 
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa Hóa và môi trường</a>
+                                    </li>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Khoa lý Luận chính trị </a>
+                                    </li> 
+                                </div>
+                                <div class="list_trungtam">
+                                    <h6 class="title_menu_sub">Trung Tâm</h6>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub">Trung tâm Đào tạo quốc tế</a>
+                                    </li>
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub"> TTKH và triển khai KTTL</a>
+                                    </li> 
+                                    <li class="item_menu_sub">
+                                        <a href="" class="link_menu_sub"> Viện ĐT vad KHUwD Miền Trung</a>
+                                    </li> 
+                                </div>
+                               </div>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                Đào tạo
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ đại học</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ Thạc Sỹ </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ Tiến Sỹ</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Đào tạo chứng chỉ</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                Nghiên cứu
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ đại học</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ Thạc Sỹ </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hệ Tiến Sỹ</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Đào tạo chứng chỉ</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                 Tuyển sinh
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Tuyển sinh 2022</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Điểm chuẩn tham khảo </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Tuyển sinh đại học  </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Tuyển sinh sau đại học</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hỏi đáp về tuyển sinh</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                 sinh viên
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Biểu mẫu và quy định dành cho sinh viên </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Hoạt động sinh viên NCKH </a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Thực tập doanh nghiệp</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Cựu sinh viên</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
@@ -78,12 +201,43 @@
                                 Tin tức - Sự Kiện
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <div class="row">
+                                 <div class="list_khoa">
+                                     <h6 class="title_menu_sub">Tin tức</h6>
+                                     <li class="item_menu_sub">
+                                         <a href="" class="link_menu_sub">Thông báo</a>
+                                     </li>
+                                     <li class="item_menu_sub">
+                                         <a href="" class="link_menu_sub">Tin bài</a>
+                                     </li> 
+                                 </div>
+                                 <div class="list_trungtam">
+                                     <h6 class="title_menu_sub">Sự kiện</h6>
+                                     <li class="item_menu_sub">
+                                         <a href="" class="link_menu_sub">Sự kiện sắp diễn ra</a>
+                                     </li>
+                                     <li class="item_menu_sub">
+                                         <a href="" class="link_menu_sub"> sự kiện đã diễn ra</a>
+                                     </li> 
+                                 </div>
+                                </div>
+                             </ul>
+                         </li>
                         </li>
                         <li class="item_menu">
                             <a href="" class="link_menu">
                                Tuyển dụng
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
+                            <ul class="list_menu_sub">
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Việc làm đại đại học Thủy Lợi</a>
+                                </li>
+                                <li class="item_menu_sub">
+                                    <a href="" class="link_menu_sub">Việc Làm cho sinh viên</a>
+                                </li>                               
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -92,7 +246,7 @@
         <div class="page_carousel">
             <div class="">
                 <div class="item">
-                    <img src="assets/image/banner1.jpg" alt="">   
+                    <img src="assets/image/banner1.jpg" class="image_banner" alt="">   
                     <div class="content_carousel">
                         <div class="text_item_carousel">
                             <span class="text_item">Nhóm ngành khoa học máy tính và hệ thống thong tin tiếp tục đứng vị trí thứ nhất tại Việt Nam, xếp hạng 401 - 450 Thế Giới, tăng 150 bậc so với năm 2021</span>
@@ -484,9 +638,26 @@
                             <img src="assets/image/logodh.png" class="img-fluid logo_footer" alt="">
                             <div class="footer_contact">
                                 <span class="text_contact">Đại học Thủy Lợi - Số 175 Tây Sơn - Đống Đa - Hà Nội</span>
-                                <span class="text_contact"><i class="fa-solid fa-phone"></i> (+84) 24 3869 2463 </span>
-                                <span class="text_contact"><i class="fa-solid fa-envelope"></i>vp@soict.hust.edu.vn</span>
+                                <span class="text_contact"><i class="fa-solid fa-phone"></i> (024) 38522201</span>
+                                <span class="text_contact"><i class="fa-solid fa-envelope"></i> phonghcth@tlu.edu.vn</span>
                                
+                            </div>
+                            <div class="icon_contact">
+                                <li class="item_icon_contact"> 
+                                    <a href="" class="link_icon_contact">
+                                        <i class="fa-brands fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li class="item_icon_contact">
+                                    <a href="" class="link_icon_contact">
+                                        <i class="fa-brands fa-youtube"></i>
+                                    </a>
+                                </li>
+                                <li class="item_icon_contact">
+                                    <a href="" class="link_icon_contact">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
                             </div>
                         </div>
                         <div class="system">
@@ -526,7 +697,13 @@
                 </div>
             </div>
             <div class="copyright_footer">
-                <span>Copyright@2022 Trường Đại học Thủy Lợi</span>
+                <div class="container">
+                    <div class="row row_copyright">
+                        <div class="text_copyright">
+                            Copyright@2022 Trường Đại học Thủy Lợi
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
         
