update link item news

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         </div>
     
                         <div class="content_item_news">
-                            <a href=""><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
+                            <a href="page/item_news.html"><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
                             <div class="text_content_item">
                                 <span class="clamp three-lines text_page">1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc Sỹ Bước 1: học viên đăng ký..</span>
                             </div>
@@ -297,7 +297,7 @@
                             </div>
                         </div>
                         <div class="content_item_news">
-                            <a href=""><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
+                            <a href="page/item_news.html"><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
                             <div class="text_content_item">
                                 <span class="clamp three-lines text_page">1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc Sỹ Bước 1: học viên đăng ký..</span>
                             </div>
@@ -311,7 +311,7 @@
                             </div>
                         </div>
                         <div class="content_item_news">
-                            <a href=""><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
+                            <a href="page/item_news.html"><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
                             <div class="text_content_item">
                                 <span class="clamp three-lines text_page">1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc Sỹ Bước 1: học viên đăng ký..</span>
                             </div>
@@ -325,7 +325,7 @@
                             </div>
                         </div>
                         <div class="content_item_news">
-                            <a href=""><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
+                            <a href="page/item_news.html"><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
                             <div class="text_content_item">
                                 <span class="clamp three-lines text_page">1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc Sỹ Bước 1: học viên đăng ký..</span>
                             </div>
@@ -339,7 +339,7 @@
                             </div>
                         </div>
                         <div class="content_item_news">
-                            <a href=""><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
+                            <a href="page/item_news.html"><h5>Hướng dẫn đăng ký xét tuyển Thạc Sỹ</h5></a>
                             <div class="text_content_item">
                                 <span class="clamp three-lines text_page">1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc Sỹ Bước 1: học viên đăng ký.. 1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc 1. Đối với ứng viên học chương trình tích hợp cử nhân - Thạc</span>
                             </div>
